# mini-lsm-go

./: .gitignore  .golangci.yml  .kazelcfg.json  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
.github/workflows/: go.yml
cmd/mini-lsm/: BUILD.bazel  main.go
cmd/mini-lsm-kv/: main.go
hack/: BUILD.bazel  install-bazel.sh  update-bazel.sh  update-deps.sh  update-proto.sh  verify-bazel.sh  verify-deps.sh  verify-golangci-lint.sh  verify-proto.sh  verify-shellcheck.sh
pkg/block/: BUILD.bazel  block.go  block_builder.go  block_iter.go  block_meta.go  block_test.go
pkg/iterator/: BUILD.bazel  interator_test.go  merge_interator_test.go  merge_iterator.go
pkg/lsm/: BUILD.bazel  lsm_storage.go  lsm_storage_test.go
pkg/memtable/: BUILD.bazel  memtable.go  memtable_test.go
pkg/proto/storage/: BUILD.bazel  storage.pb.go  storage.proto
pkg/sst/: BUILD.bazel  sst_builder.go  sst_iter.go  sst_table.go  sst_test.go
pkg/test/: BUILD.bazel  test_util.go
pkg/utils/: BUILD.bazel  assert.go  mempool.go
