load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "block",
    srcs = [
        "block.go",
        "block_builder.go",
        "block_iter.go",
        "block_meta.go",
    ],
    importpath = "github.com/dashjay/mini-lsm-go/pkg/block",
    visibility = ["//visibility:public"],
    deps = ["//pkg/utils"],
)

go_test(
    name = "block_test",
    srcs = ["block_test.go"],
    deps = [
        ":block",
        "//pkg/test",
        "@com_github_stretchr_testify//assert",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
