load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "iterator",
    srcs = [
        "iterator.go",
        "merge_iterator.go",
        "two_merge_iterator.go",
    ],
    importpath = "github.com/dashjay/mini-lsm-go/pkg/iterator",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["interator_test.go"],
    deps = [
        ":go_default_library",
        "//pkg/sst:go_default_library",
        "//pkg/test:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "iterator_test",
    srcs = ["interator_test.go"],
    deps = [
        ":iterator",
        "//pkg/sst",
        "//pkg/test",
        "@com_github_stretchr_testify//assert",
    ],
)
