load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "memtable",
    srcs = ["memtable.go"],
    importpath = "github.com/dashjay/mini-lsm-go/pkg/memtable",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/sst",
        "@com_github_huandu_skiplist//:skiplist",
    ],
)

go_test(
    name = "memtable_test",
    srcs = ["memtable_test.go"],
    deps = [
        ":memtable",
        "//pkg/test",
        "@com_github_stretchr_testify//assert",
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
