load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "storage_proto",
    srcs = ["storage.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "storage_go_proto",
    importpath = "github.com/dashjay/mini-lsm-go/pkg/proto/storage",
    proto = ":storage_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "storage",
    embed = [":storage_go_proto"],
    importpath = "github.com/dashjay/mini-lsm-go/pkg/proto/storage",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)
